# Project-ALPHA

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json
.codex/: config.toml
.github/workflows/: ci.yml
apps/alpha-cli/: pyproject.toml
apps/alpha-cli/src/alpha_cli/: __init__.py  _artifacts.py  _atomic.py  _cross_sectional.py  _forecast.py  _forecast_cache.py  _forecast_eval.py  _gauntlet.py  _optim.py  _paper.py  _portfolio.py  _propfirm.py  _runner.py  _schemas.py  _strategies.py  _surrogate.py  _synth.py  backtest_cmds.py  catalog.py  data_cmds.py  forecast_cmds.py  info_cmds.py  main.py  optim_cmds.py  options_cmds.py  paper_cmds.py  paper_store.py  propfirm_cmds.py  providers.py  report_cmds.py  research_cmds.py  risk_cmds.py  run_store.py  screener_cmds.py  system_status.py  validate_cmds.py
apps/alpha-mcp/: pyproject.toml
apps/alpha-mcp/src/alpha_mcp/: __init__.py  _invoke.py  _runs.py  server.py
apps/alpha-web/: pyproject.toml
apps/alpha-web/frontend/: README.md  index.html  openapi.json  package-lock.json  package.json  vite.config.ts  vitest.config.ts
apps/alpha-web/frontend/src/: App.tsx  fonts.css  index.css  main.tsx
apps/alpha-web/frontend/src/api/: client.ts  controlPlane.test.ts  generated.ts  types.ts
apps/alpha-web/frontend/src/components/: CommandPalette.tsx  DataTable.tsx  ErrorBoundary.tsx  JobConsole.tsx  Placeholder.tsx  PriceChartCanvas.tsx  Term.tsx  Toasts.tsx  UplotChart.tsx
apps/alpha-web/frontend/src/components/charts/: EquityChart.tsx  FanChart.tsx  FoldStrip.tsx  IntervalBar.tsx  Medallion.tsx  NullHistogram.tsx  OriginsChart.tsx  OutcomeBars.tsx  ParamHeatmap.tsx  PercentileGauge.tsx  TrialStrip.tsx  histogram.ts  hoverPlugin.ts
apps/alpha-web/frontend/src/context/: linked.ts
apps/alpha-web/frontend/src/explain/: bands.ts  dispatch.ts  explain.test.ts  forecast.ts  gates.ts  glossary.ts  optim.ts  portfolio.ts  propfirm.ts  suggestions.ts  types.ts  verdictStory.ts
apps/alpha-web/frontend/src/explain/__fixtures__/: optim.json  portfolio.json  propfirm.json  validate-a.json  validate-b.json  validate-d-kronos.json
apps/alpha-web/frontend/src/layouts/: presets.ts
apps/alpha-web/frontend/src/panels/: ActivityFeed.tsx  AiConsole.tsx  DataExplorer.tsx  Glossary.tsx  JobMonitor.tsx  OptionsGreeks.tsx  PaperMonitor.tsx  Pipeline.tsx  PriceChart.tsx  ProviderSystem.tsx  RiskMonitor.tsx  RunBrowser.tsx  RunDetail.tsx  Screener.tsx  StrategyLab.tsx  Workspaces.tsx  actions.ts  controlPlane.test.ts  controlPlane.ts  guarded.tsx  paperModel.test.ts  paperModel.ts  registry.tsx
apps/alpha-web/frontend/src/panels/rundetail/: Artifacts.tsx  ForecastDetail.tsx  ForecastEvalDetail.tsx  Gates.tsx  OptimDetail.tsx  Overview.tsx  PortfolioDetail.tsx  PropfirmDetail.tsx  Risk.tsx  TradesTab.tsx  WalkForward.tsx  common.tsx  commonUtils.ts  index.tsx
apps/alpha-web/frontend/src/state/: activity.ts  settings.ts
apps/alpha-web/frontend/src/util/: chartTheme.ts  format.ts  tokens.ts  verdict.test.ts  verdict.ts
apps/alpha-web/src/alpha_web/: __init__.py  _activity.py  _atomic.py  _candles.py  _catalog.py  _charts.py  _invoke.py  _options.py  _research.py  _risk.py  _runs.py  _screener.py  _workspaces.py  app.py
apps/alpha-web/src/alpha_web/api/: __init__.py  _common.py  activity.py  candles.py  catalog.py  control.py  jobs.py  manifest.py  models.py  options.py  paper.py  research.py  risk.py  runs.py  screener.py  workspaces.py
apps/alpha-web/src/alpha_web/static/: app.css  console.js
apps/alpha-web/src/alpha_web/static/app/: index.html
apps/alpha-web/src/alpha_web/static/app/assets/: index-3gdugsjj.js  index-B6uooai0.js  index-B9YLE-ZJ.css  index-BBWcaoXJ.js  index-BFAbi_NP.js  index-BHlZOj3v.js  index-BW7ijq6g.css  index-BfRhmvLs.js  index-BsoZ31ie.js  index-C2QJoapj.css  index-CCtAFSGu.css  index-CxQsT8TT.js  index-D7xCXlyy.css  index-DAwuYqlp.js  index-DHbDuL8j.css  index-DYgiC2SI.css  index-Dk6WbFET.js  index-DxYbAjuK.js  index-Jq8xRdIO.js  index-NgE2Ktgn.js  index-SMOLFkpV.js  index-b1LWA-ph.js  index-enMLbL4x.js  index-h3hGfPt-.css  index-t0b8qU0E.js  index-vnL5_U2t.css
apps/alpha-web/src/alpha_web/templates/: base.html  console.html  index.html  new.html  run_detail.html
docs/: ARCHITECTURE.md  KRONOS_QUICKSTART.md
docs/adr/: 0001-strict-layered-dag.md  0002-cli-sole-composer-subprocess-surfaces.md  0003-t+1-fill-encoding.md  0004-two-clock-corporate-actions.md  0005-point-in-time-firewall.md  0006-two-tier-null-model.md  0007-deterministic-run-id-and-seeds.md  0008-vendored-kronos-and-alpha-forecast-layer.md  0009-forecast-leakage-and-tier2-cost-policy.md  0010-local-kronos-weights-offline-policy.md  0011-evidence-gated-external-integrations.md  0012-operational-paper-sessions.md  README.md
docs/audit/: 2026-07-05-institutional-audit.md  2026-07-18-professional-hardening-readiness.md  2026-07-19-post-v2-architecture-audit.md
docs/dependency-review/: 2026-06-19-python-dependency-review.md
docs/governance/: 2026-07-19-dependency-license-matrix.md  2026-07-19-post-v2-risk-register.md  README.md
docs/investigations/: 2026-06-23-tier1-surrogate-crediting-bias.md
research/: 00-SYNTHESIS.md  01-free-market-data.md  02-storage-layer.md  03-backtesting-engine.md  04-statistical-validation.md  05-paper-trading-feeds.md  06-strategy-encoding-ml.md  07-architecture-ai-workflow.md  2026-06-vendor-blueprint-building-elite-ai-trading-software.md
research/analysis/: mizerxbt_eth_dossier.md  mizerxbt_eth_trade_quant.py
research/charts/: mizerxbt_eth_short_1h.py
scripts/: generate_web_openapi.py  setup_kronos_mac.sh
tests/: conftest.py
tests/bias_guards/: test_candles_pit.py  test_forecast_fake_causal.py  test_forecast_pit_future_poison.py  test_future_poison_pattern.py  test_garch_forecast_causal.py  test_kronos_cache_no_lookahead.py  test_kronos_forecast_lookahead.py  test_momentum_signal_lookahead.py  test_montecarlo_null_calibration.py  test_oos_stitch_no_leak.py  test_paper_parity.py  test_pit_corporate_action.py  test_survivorship.py  (+6 more)
(+186 files in other folders)
