[project]
name = "project-alpha"
version = "0.0.0"
description = "Personal quantitative research platform (backtest + validation + paper)."
requires-python = ">=3.12"
dependencies = [
    "alpha-core",
    "alpha-data",
    "alpha-strategies",
    "alpha-backtest",
    "alpha-validation",
    "alpha-cli",
]

[tool.uv]
package = false  # virtual workspace root; not itself an installable package

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.uv.sources]
alpha-core = { workspace = true }
alpha-data = { workspace = true }
alpha-strategies = { workspace = true }
alpha-backtest = { workspace = true }
alpha-validation = { workspace = true }
alpha-cli = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "mypy>=1.11",
    "ruff>=0.6",
    "import-linter>=2.1",
    "pandas-stubs>=2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["alpha_core", "alpha_data", "alpha_strategies", "alpha_backtest", "alpha_validation", "alpha_cli"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --import-mode=importlib"
pythonpath = ["."]
markers = [
    "bias_guard: tests that mechanically prevent look-ahead / survivorship bias (gated in CI)",
]

[tool.importlinter]
root_packages = [
    "alpha_core",
    "alpha_data",
    "alpha_strategies",
    "alpha_backtest",
    "alpha_validation",
    "alpha_cli",
]

[[tool.importlinter.contracts]]
name = "alpha_core imports nothing internal"
type = "forbidden"
source_modules = ["alpha_core"]
forbidden_modules = ["alpha_data", "alpha_strategies", "alpha_backtest", "alpha_validation", "alpha_cli"]

[[tool.importlinter.contracts]]
name = "alpha_data depends only on core"
type = "forbidden"
source_modules = ["alpha_data"]
forbidden_modules = ["alpha_strategies", "alpha_backtest", "alpha_validation", "alpha_cli"]

[[tool.importlinter.contracts]]
name = "alpha_strategies depends only on core"
type = "forbidden"
source_modules = ["alpha_strategies"]
forbidden_modules = ["alpha_data", "alpha_backtest", "alpha_validation", "alpha_cli"]

[[tool.importlinter.contracts]]
name = "alpha_validation depends only on core"
type = "forbidden"
source_modules = ["alpha_validation"]
forbidden_modules = ["alpha_data", "alpha_strategies", "alpha_backtest", "alpha_cli"]

[[tool.importlinter.contracts]]
name = "alpha_backtest depends only on core + data"
type = "forbidden"
source_modules = ["alpha_backtest"]
forbidden_modules = ["alpha_strategies", "alpha_validation", "alpha_cli"]
