[project]
name = "project-alpha"
version = "1.0.0"
description = "Personal quantitative research platform (backtest + validation + paper)."
requires-python = ">=3.12"
dependencies = [
    "alpha-core",
    "alpha-data",
    "alpha-strategies",
    "alpha-backtest",
    "alpha-validation",
    "alpha-forecast",
    "alpha-options",
    "alpha-cli",
    "alpha-mcp",
    "alpha-web",
]

[tool.uv]
package = false  # virtual workspace root; not itself an installable package

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.uv.sources]
alpha-core = { workspace = true }
alpha-data = { workspace = true }
alpha-strategies = { workspace = true }
alpha-backtest = { workspace = true }
alpha-validation = { workspace = true }
alpha-forecast = { workspace = true }
alpha-options = { workspace = true }
alpha-cli = { workspace = true }
alpha-mcp = { workspace = true }
alpha-web = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "mypy>=1.11",
    "ruff>=0.6",
    "import-linter>=2.1",
    "pandas-stubs>=2.0",
]
# Opt-in torch stack for the Kronos forecaster: `uv sync --group kronos`.
# Kept out of the default install: torch is ~2.5 GB of CUDA wheels on Linux/PyPI and the
# sandbox/CI never run real inference (they use stub forecasters; weights need network anyway).
kronos = [
    "alpha-forecast[kronos]",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# Vendored Kronos code stays byte-faithful to upstream; never lint/format it. The workstation
# frontend is a TypeScript/Vite tree (its own toolchain) — the Python gate never touches it.
extend-exclude = [
    "packages/alpha-forecast/src/alpha_forecast/_vendor",
    "apps/alpha-web/frontend",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["alpha_core", "alpha_data", "alpha_strategies", "alpha_backtest", "alpha_validation", "alpha_forecast", "alpha_options", "alpha_cli", "alpha_mcp", "alpha_web"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true

[[tool.mypy.overrides]]
# nautilus_trader ships py.typed, but its Cython extension submodules (model.data,
# model.objects, ...) carry no stubs mypy can load — treat those imports as untyped.
module = ["nautilus_trader.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# scipy ships no mypy-loadable stubs (the separate scipy-stubs package is optional and
# strict-mode-noisy); we use only scipy.stats.norm for exact normal CDF/quantiles in BCa.
module = ["scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# quantstats-lumi (the numpy-2-safe quantstats fork) ships no stubs; it's used only at the
# tear-sheet rendering edge (alpha_validation.tearsheet). pandas itself is typed via pandas-stubs.
module = ["quantstats_lumi.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Vendored upstream Kronos code (MIT) — kept byte-faithful; it will never pass --strict.
module = ["alpha_forecast._vendor.*"]
ignore_errors = true

[[tool.mypy.overrides]]
# The optional torch stack (installed via `uv sync --group kronos`) is imported lazily and
# only in the sanctioned pandas/torch edge of alpha_forecast; no loadable stubs assumed.
module = ["torch.*", "einops.*", "huggingface_hub.*", "tqdm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --import-mode=importlib"
pythonpath = ["."]
markers = [
    "bias_guard: tests that mechanically prevent look-ahead / survivorship bias (gated in CI)",
    "network: tests that hit the live network (skipped in CI / offline runs)",
]

[tool.importlinter]
root_packages = [
    "alpha_core",
    "alpha_data",
    "alpha_strategies",
    "alpha_backtest",
    "alpha_validation",
    "alpha_forecast",
    "alpha_options",
    "alpha_cli",
    "alpha_mcp",
    "alpha_web",
]

[[tool.importlinter.contracts]]
name = "alpha_core imports nothing internal"
type = "forbidden"
source_modules = ["alpha_core"]
forbidden_modules = ["alpha_data", "alpha_strategies", "alpha_backtest", "alpha_validation", "alpha_forecast", "alpha_options", "alpha_cli"]

[[tool.importlinter.contracts]]
name = "alpha_data depends only on core"
type = "forbidden"
source_modules = ["alpha_data"]
forbidden_modules = ["alpha_strategies", "alpha_backtest", "alpha_validation", "alpha_forecast", "alpha_options", "alpha_cli"]

[[tool.importlinter.contracts]]
name = "alpha_strategies depends only on core"
type = "forbidden"
source_modules = ["alpha_strategies"]
forbidden_modules = ["alpha_data", "alpha_backtest", "alpha_validation", "alpha_forecast", "alpha_options", "alpha_cli"]

[[tool.importlinter.contracts]]
name = "alpha_validation depends only on core"
type = "forbidden"
source_modules = ["alpha_validation"]
forbidden_modules = ["alpha_data", "alpha_strategies", "alpha_backtest", "alpha_forecast", "alpha_options", "alpha_cli"]

[[tool.importlinter.contracts]]
name = "alpha_backtest depends only on core + data"
type = "forbidden"
source_modules = ["alpha_backtest"]
forbidden_modules = ["alpha_strategies", "alpha_validation", "alpha_forecast", "alpha_options", "alpha_cli"]

[[tool.importlinter.contracts]]
name = "alpha_forecast depends only on core"
type = "forbidden"
source_modules = ["alpha_forecast"]
forbidden_modules = ["alpha_data", "alpha_strategies", "alpha_backtest", "alpha_validation", "alpha_options", "alpha_cli"]

[[tool.importlinter.contracts]]
name = "alpha_options depends only on core"
type = "forbidden"
source_modules = ["alpha_options"]
forbidden_modules = ["alpha_data", "alpha_strategies", "alpha_backtest", "alpha_validation", "alpha_forecast", "alpha_cli"]

[[tool.importlinter.contracts]]
name = "alpha_mcp sits atop the DAG (nothing imports it)"
type = "forbidden"
source_modules = ["alpha_core", "alpha_data", "alpha_strategies", "alpha_backtest", "alpha_validation", "alpha_forecast", "alpha_options", "alpha_cli"]
forbidden_modules = ["alpha_mcp"]

[[tool.importlinter.contracts]]
name = "alpha_web sits atop the DAG (nothing imports it)"
type = "forbidden"
source_modules = ["alpha_core", "alpha_data", "alpha_strategies", "alpha_backtest", "alpha_validation", "alpha_forecast", "alpha_options", "alpha_cli", "alpha_mcp"]
forbidden_modules = ["alpha_web"]
