[project]
name = "alpha-cli"
version = "1.0.0"
description = "Project ALPHA command-line interface."
requires-python = ">=3.12"
dependencies = [
    "alpha-core",
    "alpha-data",
    "alpha-strategies",
    "alpha-backtest",
    "alpha-validation",
    "alpha-forecast",
    "alpha-options",
    "alpha-screener",
    "typer>=0.12",
    "numpy>=1.26",
    "polars>=1.0",
    "nautilus-trader>=1.228",
]

[project.scripts]
alpha = "alpha_cli.main:main"

[tool.uv.sources]
alpha-core = { workspace = true }
alpha-data = { workspace = true }
alpha-strategies = { workspace = true }
alpha-backtest = { workspace = true }
alpha-validation = { workspace = true }
alpha-forecast = { workspace = true }
alpha-options = { workspace = true }
alpha-screener = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alpha_cli"]
