[project]
name = "alpha-mcp"
version = "1.0.0"
description = "MCP server exposing Project ALPHA's CLI as conversational tools."
requires-python = ">=3.12"
dependencies = [
    "alpha-cli",
    "alpha-core",
    "mcp>=1.2",
]

[project.scripts]
alpha-mcp = "alpha_mcp.server:main"

[tool.uv.sources]
alpha-cli = { workspace = true }
alpha-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alpha_mcp"]
