[project]
name = "alpha-web"
version = "1.0.0"
description = "ALPHA Workstation: an institutional research & trading terminal (JSON+SSE backend + SPA)."
requires-python = ">=3.12"
# The SPA (apps/alpha-web/frontend) is built with npm and its assets are committed under
# src/alpha_web/static/app, so the Python install/CI never needs Node.
dependencies = [
    "alpha-core",
    "alpha-cli",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "sse-starlette>=2.1",
    "polars>=1.0",
    "pydantic>=2.7",
    "anyio>=4.0",
]

[project.scripts]
alpha-web = "alpha_web.app:main"

[tool.uv.sources]
alpha-core = { workspace = true }
alpha-cli = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alpha_web"]
